# i3

./: .bazelrc  .clang-format  .gitignore  .rooignore  BUILD.bazel  Cargo.toml  LICENSE.txt  MODULE.bazel  README.md  bootstrap.ps1  bootstrap.sh  debug_output.txt  download-assets.ps1  generate_math.ps1  graph.mmd  profile_build.ps1  update_csharp_deps.ps1
crates/i3_baker/: Cargo.toml
crates/i3_baker/src/: error.rs  lib.rs  main.rs  manifest.rs  pipeline.rs  registry.rs  scanner.rs  writer.rs
crates/i3_baker/src/importers/: assimp_importer.rs  hdr_ibl_importer.rs  ibl_bake.rs  ibl_math.rs  image_importer.rs  mod.rs  noise_importer.rs  pipeline_importer.rs
crates/i3_baker/tests/: integration_test.rs  pipeline.rs
crates/i3_baker/tests/assets/: test_include.slangh  test_pipeline.i3p  test_shader.slang
crates/i3_bundle/: Cargo.toml
crates/i3_bundle/src/: main.rs
crates/i3_gfx/: Cargo.toml
crates/i3_gfx/src/: lib.rs  prelude.rs
crates/i3_gfx/src/graph/: backend.rs  compiled.rs  compiler.rs  hri.rs  mod.rs  node.rs  pass.rs  pipeline.rs  symbol_table.rs  sync.rs  sync_planner.rs  temporal.rs  types.rs  types.tests.rs
crates/i3_gfx/tests/: graph_test.rs
crates/i3_gfx/tests/common/: mod.rs
crates/i3_io/: Cargo.toml
crates/i3_io/src/: asset.rs  error.rs  ibl.rs  lib.rs  material.rs  mesh.rs  noise_asset.rs  pipeline_asset.rs  prelude.rs  scene_asset.rs  texture.rs  vfs.rs
crates/i3_renderer/: Cargo.toml  build.rs
crates/i3_renderer/assets/: system.bake.ron
crates/i3_renderer/assets/pipelines/: ao_none.i3p  average_luminance.i3p  bloom_composite.i3p  bloom_downsample.i3p  bloom_prefilter.i3p  bloom_upsample.i3p  cluster_build.i3p  debug_draw.i3p  debug_viz.i3p  deferred_resolve.i3p  draw_call_gen.i3p  fxaa.i3p  gbuffer.i3p  gtao_main.i3p  gtao_temporal.i3p  hdr_mips_reduce.i3p  hdr_spd.i3p  histogram_build.i3p  prez.i3p  (+18 more)
crates/i3_renderer/shaders/: average_luminance.slang  cluster_build.slang  deferred_resolve.slang  gbuffer.slang  histogram_build.slang  light_cull.slang  sky.slang  tonemap.slang
crates/i3_renderer/src/: bindless.rs  constants.rs  frame_constant_data.rs  gpu_buffers.rs  groups.rs  lib.rs  prelude.rs  render_graph.rs  scene.rs
crates/i3_vulkan_backend/: Cargo.toml  build.rs
crates/i3_vulkan_backend/src/: accel_struct.rs  backend.rs  commands.rs  convert.rs  debug.rs  descriptors.rs  device.rs  instance.rs  lib.rs  pipeline_cache.rs  prelude.rs  resource_arena.rs  resources.rs  submission.rs  swapchain.rs  sync.rs  sync_planner.rs  window.rs  window_context.rs
examples/common/: Cargo.toml
examples/common/src/: basic_scene.rs  camera_controller.rs  gltf_loader.rs  lib.rs
examples/compute_mandelbrot/: Cargo.toml
examples/compute_mandelbrot/src/: main.rs
examples/deferred_gltf/: Cargo.toml
examples/deferred_gltf/src/: main.rs
examples/deferred_stress/: Cargo.toml
examples/deferred_stress/src/: main.rs
examples/synthwave_grid/: Cargo.toml
examples/synthwave_grid/shaders/: crt.slang  grid.slang
examples/synthwave_grid/src/: main.rs
examples/viewer/: Cargo.toml  build.rs  viewer_scenes.bake.ron
examples/viewer/examples/: check_ash_format.rs  check_format.rs  verify_mapping.rs
examples/viewer/src/: main.rs
examples/voxel/: Cargo.toml  build.rs
examples/voxel/src/: main.rs  sdf.rs  voxel.rs
native/: BUILD.bazel  test_add.c
native/content_store/: BUILD.bazel  content_store.c  content_store.h
native/content_store_tst/: BUILD.bazel  content_store.cpp
native/core/: BUILD.bazel  arena.h  array.h  bitset.h  blackboard.h  common.h  dbg_allocator.c  fs.c  fs.h  hash.h  hashtable.h  list.h  log.c  log.h  memory_pool.h  time.c  time.h  vec3.h  virtual_alloc.c  virtual_alloc.h  virtual_array.h
native/core_tst/: BUILD.bazel  arena.cpp  array.cpp  bitset.cpp  blackboard.cpp  fs.cpp  hash.cpp  hashtable.cpp  list.cpp  log.cpp  memory_pool.cpp  virtual_alloc.cpp  virtual_array.cpp
native/deferred_graph/: BUILD.bazel  deferred_graph.c  deferred_graph.h  deferred_root.c  deferred_root.h  gbuffer_pass.c  gbuffer_pass.h  light_pass.c  light_pass.h  opaque_pass.c  opaque_pass.h  opaque_pass.slang  shaders.slang  shaders_common.slangh
native/fbs/: BUILD.bazel  fx.fbs  model.fbs  pipeline.fbs
native/game/: BUILD.bazel  game.c  game.h
native/math/: BUILD.bazel  cam.h  common.h  mat.h  quat.h  transform.h  vec.h
native/math_tst/: BUILD.bazel  mat.cpp  quat.cpp  transform.cpp  vec.cpp  vec2.cpp  vec3.cpp  vec4.cpp
native/render_backend/: BUILD.bazel  render_backend.h
native/render_window/: BUILD.bazel  render_window.c  render_window.h
native/renderer/: BUILD.bazel  model.c  model.cc  model.h  render_context.h  render_graph.c  render_graph.h  renderer.c  renderer.h  scene.c  scene.h
native/renderer/passes/: deferred_root.c  deferred_root.h  gbuffer_pass.c  gbuffer_pass.h  light_pass.c  light_pass.h  passes.h
native/vk_backend/: BUILD.bazel  backend.c  backend.h  barrier.h  buffer.c  buffer.h  cmd_buffer.c  cmd_buffer.h  cmd_list.c  cmd_list.h  common.c  common.h  convert.c  convert.h  descriptor_set.c  descriptor_set.h  descriptor_set_layout.c  descriptor_set_layout.h  device.c  device.h  device_desc.h  device_ext.c  device_ext.h  framebuffer.c  framebuffer.h  image.c  image.h  image_view.c  image_view.h  instance_ext.c  instance_ext.h  pipeline.c  pipeline.h  pipeline_layout.c  pipeline_layout.h  sampler.c  sampler.h  shader_module.c  shader_module.h  submission.c  (+6 more)
samples/flatbuffers_interop/: BUILD.bazel  main.cc
samples/game_draw_cube/: BUILD.bazel  main.c  shaders.slang
samples/vk_draw_cube/: BUILD.bazel  main.c  shaders.slang
samples/vk_draw_cubes/: BUILD.bazel  main.c  shaders.slang
tools/fx_processor/: BUILD.bazel  main.cc  parser.cc  parser.h  parser_test.cc
tools/fx_processor/lib/: BUILD.bazel  fx_processor.cc  fx_processor.h  parser.cc
tools/fx_processor/tst/: BUILD.bazel  parser_test.cc
tools/fx_processor/tst_fx/: common.i3fx  fullscreen_rect.i3fx  math.i3fx  test.i3fx
tools/model_processor/: BUILD.bazel  main.cc
tools/pipeline_processor/: BUILD.bazel  main.cc  parser.cc  parser.h
(+145 files in other folders)
