[workspace]
members = [
    "crates/i3_gfx",
    "crates/i3_vulkan_backend",
    "crates/i3_null_backend",
    "crates/i3_slang",
    "examples/draw_triangle",
    "examples/common",
    "examples/compute_mandelbrot",
    "tools/rust_diagnostics",
    "tools/vulkan_diagnostics", "crates/i3_baker", "crates/i3_io",
    "crates/i3_renderer",
    "examples/deferred_gltf",
    "examples/deferred_stress",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["C. Delacourt"]

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
# External (To be justified and approved one-by-one)
bitflags = "2.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
ash = { version = "0.38", features = ["linked"] }
sdl2 = { version = "0.37", default-features = false }
vk-mem = "0.5.0"
nalgebra = "0.33"
nalgebra-glm = "0.19"
gltf = "0.16"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
pathdiff = "0.2"

# Internal
i3_gfx = { path = "crates/i3_gfx" }
i3_io = { path = "crates/i3_io" }
i3_renderer = { path = "crates/i3_renderer" }
i3_slang = { path = "crates/i3_slang" }
examples_common = { path = "examples/common" }
