# rules dotnet
bazel_dep(name = "rules_dotnet", version = "0.18.2")
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.200")
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

# 7zip
sevenzip = use_extension("//bazel:seven_zip.bzl", "seven_zip")
sevenzip.install(version = "2409")
use_repo(sevenzip, "seven_zip")

# vulkan sdk
vulkan_sdk = use_extension("//bazel:vulkan_sdk.bzl", "vulkan_sdk")
vulkan_sdk.install(version = "1.4.309.0")
use_repo(vulkan_sdk, "vulkan_sdk")

# vcpkg
vcpkg = use_extension("//bazel:vcpkg.bzl", "vcpkg")
vcpkg.install(version = "2025.03.19")
use_repo(vcpkg, "vcpkg")
