# vulkan sdk
vulkan_sdk = use_extension("//bazel:vulkan_sdk.bzl", "vulkan_sdk")
vulkan_sdk.install(version = "1.4.309.0")
use_repo(vulkan_sdk, "vulkan_sdk")

# vcpkg
vcpkg = use_extension("//bazel:vcpkg.bzl", "vcpkg")
vcpkg.install(version = "2025.03.19")
use_repo(vcpkg, "vcpkg")

# rules dotnet
bazel_dep(name = "rules_dotnet", version = "0.18.2")
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100")
use_repo(dotnet, "dotnet_toolchains")
register_toolchains("@dotnet_toolchains//:all")

# dotnet dependencies
#mathlib_generator_deps = use_extension("//csharp/deps:paket.mathlib_generator_extension.bzl", "mathlib_generator_extension")
#use_repo(mathlib_generator_deps, "paket.mathlib_generator")
