cc_library(
    name = "add",
    srcs = ["add.c", "add.h"],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "add_shared",
    deps = [":add"],
    visibility = ["//visibility:public"],    
)

cc_binary(
    name = "test_add",
    srcs = ["test_add.c"],
    deps = [":add", "@vulkan_sdk//:core", "@vcpkg//:glfw3"],
    dynamic_deps = [":add_shared"],
)