[package]
name = "i3_baker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
i3_io.workspace = true
thiserror.workspace = true
tracing.workspace = true
rayon.workspace = true
uuid = { workspace = true, features = ["v5"] }
pathdiff.workspace = true
tracing-subscriber.workspace = true
bytemuck.workspace = true
russimp.workspace = true
nalgebra-glm.workspace = true
image = "0.25.5"
intel_tex_2 = "0.3.0"
