[package]
name = "i3_gfx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
tracing.workspace = true

[dev-dependencies]
i3_null_backend = { path = "../i3_null_backend" }
tracing-subscriber = { workspace = true }
