[package]
name = "i3_io"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.10", features = ["v4", "serde"] }

[lints]
workspace = true
