[package]
name = "i3_io"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
memmap2.workspace = true
rayon.workspace = true
serde.workspace = true
bincode.workspace = true
uuid.workspace = true
bytemuck.workspace = true
