[package]
name = "i3_vulkan_backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
profiling = []

[dependencies]
i3_gfx.workspace = true
ash.workspace = true
sdl2.workspace = true
vk-mem.workspace = true
tracing.workspace = true
i3_io = { workspace = true }
rayon = { workspace = true }
postcard = { workspace = true }
