[package]
name = "examples_common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdl2 = { workspace = true }
i3_gfx = { path = "../../crates/i3_gfx" }
i3_vulkan_backend = { path = "../../crates/i3_vulkan_backend" }
i3_renderer = { path = "../../crates/i3_renderer" }
i3_io = { path = "../../crates/i3_io" }
nalgebra-glm = { workspace = true }
gltf = { workspace = true }
uuid = { workspace = true }
tracing-appender = "0.2.4"
