[package]
name = "deferred_gltf"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
i3_gfx = { path = "../../crates/i3_gfx" }
i3_vulkan_backend = { path = "../../crates/i3_vulkan_backend" }
i3_renderer = { path = "../../crates/i3_renderer" }
i3_slang = { path = "../../crates/i3_slang" }
examples_common = { path = "../common" }
tracing = "0.1"
nalgebra-glm = { workspace = true }
