[package]
name = "deferred_stress"
version = "0.1.0"
edition = "2024"

[dependencies]
i3_gfx = { path = "../../crates/i3_gfx" }
i3_vulkan_backend = { path = "../../crates/i3_vulkan_backend" }
i3_slang = { path = "../../crates/i3_slang" }
i3_renderer = { path = "../../crates/i3_renderer" }
examples_common = { path = "../common" }
nalgebra-glm = "0.19"
tracing = "0.1"
sdl2 = { version = "0.37", default-features = false }
