cc_library(
    name = "renderer",
    srcs = glob([
        "*.c",
        "passes/*.c",
    ]),
    hdrs = glob([
        "*.h",
        "passes/*.h",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//native/content_store",
        "//native/core",
        "//native/math",
        "//native/render_backend",
    ],
)
