load("//bazel:flatc.bzl", "flatc")

flatc(
    name = "fbs",
    srcs = [
        "//native/fbs:model_fbs",
    ],
)

cc_library(
    name = "renderer",
    srcs = glob([
        "*.c",
        "passes/*.c",
        "*.cc",
    ]),
    hdrs = glob([
        "*.h",
        "passes/*.h",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":fbs",
        "//native/content_store",
        "//native/core",
        "//native/math",
        "//native/render_backend",
        "@vcpkg//:flatbuffers",
    ],
)
