load("//bazel:model.bzl", "model")
load("//bazel:slang.bzl", "slangc")

slangc(
    name = "shaders",
    srcs = glob(["*.slang"]),
)

model(
    name = "models",
    srcs = glob(["*.glb"]),
)

cc_binary(
    name = "game_draw_cube",
    srcs = glob(["*.c"]),
    data = [
        ":models",
        ":shaders",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//native/game",
    ],
)
