load("//bazel:model.bzl", "model")

model(
    name = "models",
    srcs = glob(["*.glb"]),
)

cc_binary(
    name = "game_draw_cube",
    srcs = glob(["*.c"]),
    data = [
        ":models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//native/deferred_graph",
        "//native/game",
    ],
)
