load("//bazel:model.bzl", "model")
load("//bazel:slang.bzl", "slangc")

model(
    name = "models",
    srcs = glob(["*.glb"]),
)

slangc(
    name = "shaders",
    srcs = ["//native/deferred_graph:shaders"],
)

cc_binary(
    name = "game_draw_cube",
    srcs = glob(["*.c"]),
    data = [
        ":models",
        ":shaders",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//native/deferred_graph",
        "//native/game",
    ],
)
