load("//bazel:slang.bzl", "slangc")

slangc(
    name = "shaders",
    srcs = glob(["*.slang"]),
)

cc_binary(
    name = "vk_draw_cubes",
    srcs = glob(["*.c"]),
    data = [":shaders"],
    visibility = ["//visibility:public"],
    deps = [
        "//native/math",
        "//native/vk_backend",
    ],
)
