load("//bazel:flatc.bzl", "flatc")

flatc(
    name = "fx_fbs",
    srcs = [
        "//native/fbs:fx_fbs",
    ],
)

cc_library(
    name = "fx_processor_parser",
    srcs = ["parser.cc"],
    hdrs = [
        "parser.h",
        "peglib.h",
    ],
    cxxopts = [
        "/std:c++20",
        "/Zc:__cplusplus",
        "/wd4566",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tst",
    size = "small",
    srcs = ["parser_test.cc"],
    cxxopts = [
        "/std:c++20",
        "/Zc:__cplusplus",
        "/wd4566",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fx_processor_parser",
        "@vcpkg//:gtest",
    ],
)

cc_binary(
    name = "fx_processor",
    srcs = ["main.cc"],
    cxxopts = [
        "/std:c++20",
        "/Zc:__cplusplus",
        "/wd4566",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fx_fbs",
        ":fx_processor_parser",
        "@vcpkg//:flatbuffers",
    ],
)
